export const snapshot = {};

snapshot[`get all 1`] = `
{
  bar: 123,
  foo: "bar",
  timed: "out of time",
}
`;

snapshot[`get all 2`] = `
{
  bar: 123,
  foo: "😎",
  timed: "out of time",
}
`;

snapshot[`get all 3`] = `
{
  bar: 123,
  foo: "☂️",
  timed: "out of time",
}
`;

snapshot[`get all 4`] = `
{
  bar: 123,
  foo: "🌊",
  timed: "out of time",
}
`;

snapshot[`get all 5`] = `
{
  bar: 123,
  foo: "🏄‍♂️",
  timed: "out of time",
}
`;

snapshot[`get all 6`] = `
{
  bar: 123,
  foo: "Async payload",
  timed: "out of time",
}
`;
